# Kanban-PM

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai_client.py  board_store.py  main.py
backend/app/static/: index.html
backend/tests/: test_app.py
docs/: DATABASE.md  PLAN.md
frontend/: AGENTS.md  playwright.config.ts
frontend/playwright-report/: index.html
frontend/src/app/: page.tsx
frontend/src/components/: AuthenticatedApp.test.tsx  AuthenticatedApp.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanColumn.tsx
frontend/src/lib/: api.ts  kanban.test.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-mac.sh  start.ps1  stop-linux.sh  stop.ps1
